drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"drupal-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"reto2.site","http":{"paths":[{"backend":{"service":{"name":"drupal","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2024-11-03T02:49:18Z"
  generation: 1
  name: drupal-ingress
  namespace: default
  resourceVersion: "938406"
  uid: c50303ec-64e8-4178-bbbe-f9d306ffb33a
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - reto2.site
    secretName: letsencrypt-prod
  rules:
  - host: reto2.site
    http:
      paths:
      - backend:
          service:
            name: drupal
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: a0d9c5adbea6d4f59ab7ef5d7afd9792-c0cd613f395c3551.elb.us-east-1.amazonaws.com
