ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "reto2.site" 
    http:
      paths:
      - path: /  
        pathType: Prefix
        backend:
          service:
            name: drupal  
            port:
              number: 80
